ecmascript/parser/tests/test262-error-references/fail/1acada3c651821cf.js.stderr
error: Expected }, got Some(;)
 --> $DIR/tests/test262-parser/fail/1acada3c651821cf.js:1:12
  |
1 | `hello ${10;test`
  |            ^

